Fixed bug for filter buttons on mobile screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,11 +15,15 @@ html {
 body {
   height: 100vh;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.8rem;
+  font-size: clamp(1.2rem, 3vw, 1.8rem);
   background-image: url('./assets/images/bg-desktop-light.jpg');
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100%;
   display: flex;
   justify-content: center;
+
+  @media screen and (max-width: 900px) {
+    background-image: url('./assets/images/bg-mobile-light.jpg');
+  }
 }
