--- a/src/components/listItem/ListItem.scss
+++ b/src/components/listItem/ListItem.scss
@@ -2,9 +2,10 @@
 
 .item {
   width: 100%;
-  height: 6.4rem;
-  background-color: variables.$lt-grey-100;
+  height: clamp(4.8rem, 10vw, 6.4rem);
+  // background-color: variables.$lt-grey-100;
   border-bottom: 1px solid variables.$lt-grey-300;
+  border-radius: 5px 5px 0 0;
 
   display: flex;
   align-items: center;
@@ -12,9 +13,13 @@
   cursor: pointer;
   position: relative;
 
+  @media screen and (max-width: 540px) {
+    padding: 0 1.6rem;
+  }
+
   &__checkbox-container {
-    width: 2.4rem;
-    height: 2.4rem;
+    width: clamp(2rem, 3vw, 2.4rem);
+    height: clamp(2rem, 3vw, 2.4rem);
     border: 1px solid variables.$lt-grey-300;
     border-radius: 50px;
 
@@ -22,7 +27,6 @@
     align-items: center;
     justify-content: center;
     transition: all 0.4s;
-    position: relative;
   }
 
   &__checkbox-container:hover {
@@ -37,8 +41,8 @@
   }
 
   &__checkbox-container--active {
-    width: 2.4rem;
-    height: 2.4rem;
+    width: clamp(2rem, 3vw, 2.4rem);
+    height: clamp(2rem, 3vw, 2.4rem);
     border: double 1px transparent;
     background-image: linear-gradient(variables.$checkbox-gradient);
     background-origin: border-box;
@@ -53,6 +57,11 @@
     width: 1.2rem;
     height: 1rem;
     display: none;
+
+    @media screen and (max-width: 540px) {
+      width: 1rem;
+      height: 0.8rem;
+    }
   }
 
   &__checkbox-container--active &__icon-check {
@@ -70,12 +79,20 @@
   &__description {
     color: variables.$lt-grey-500;
     margin-left: 2.4rem;
+
+    @media screen and (max-width: 540px) {
+      margin-left: 1.2rem;
+    }
   }
 
   &__description-checked {
     text-decoration: line-through;
     color: variables.$lt-grey-300;
     margin-left: 2.4rem;
+
+    @media screen and (max-width: 540px) {
+      margin-left: 1.2rem;
+    }
   }
 
   &__edit {
@@ -114,14 +131,18 @@
   }
 
   &__icon {
-    width: 1.6rem;
-    height: 1.6rem;
+    width: clamp(1.2rem, 3vw, 1.6rem);
+    height: clamp(1.2rem, 3vw, 1.6rem);
     cursor: pointer;
     visibility: hidden;
     transition: 0.1s;
 
     &:hover {
       fill: variables.$lt-grey-500;
+    }
+
+    @media screen and (max-width: 900px) {
+      visibility: visible;
     }
   }
 
