--- a/src/components/userInput/UserInput.scss
+++ b/src/components/userInput/UserInput.scss
@@ -9,23 +9,29 @@
   padding: 0 2.4rem;
   gap: 2.4rem;
   fill: variables.$lt-grey-400;
-  margin-bottom: 2.4rem;
+  margin-bottom: clamp(1.6rem, 3vw, 2.4rem);
   box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
+  position: relative;
+
+  @media screen and (max-width: 540px) {
+    padding: 0 1.6rem;
+    gap: 1.2rem;
+  }
 
   & :hover {
     fill: variables.$lt-grey-500;
   }
 
   &__icon {
-    width: 3rem;
-    height: 3rem;
+    width: clamp(2.8rem, 5vw, 3rem);
+    height: clamp(2.8rem, 5vw, 3rem);
     cursor: pointer;
     transition: all 0.2s;
   }
 
   &__input {
     width: 100%;
-    height: 6.4rem;
+    height: clamp(4.8rem, 10vw, 6.4rem);
     border: none;
     outline: none;
 
