--- a/src/filters/ListFilters.scss
+++ b/src/filters/ListFilters.scss
@@ -10,6 +10,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 2.4rem;
+  border-radius: 0 0 5px 5px;
+  position: relative;
 
   &__items-left {
     text-transform: lowercase;
@@ -19,6 +21,24 @@
     display: flex;
     align-items: center;
     gap: 1.8rem;
+
+    @media screen and (max-width: 540px) {
+      position: absolute;
+      top: 4.6rem;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      width: 90vw;
+      height: 5rem;
+      display: flex;
+      align-items: center;
+      background-color: variables.$lt-grey-100;
+
+      justify-content: center;
+      box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
+      border-radius: 5px;
+      margin-top: 2rem;
+    }
 
     & .button {
       border: none;
