--- a/src/layout/Layout.scss
+++ b/src/layout/Layout.scss
@@ -1,10 +1,14 @@
+@use '../sass/variables';
+
 .main {
-  width: 95vw;
+  width: 90vw;
   max-width: 54rem;
 }
 
 .list__wrapper {
   box-shadow: 0px 35px 50px -15px rgba(194, 195, 214, 0.5);
   border-radius: 5px;
-  overflow: hidden;
+  // overflow: hidden;
+  background-color: variables.$lt-grey-100;
+  position: relative;
 }
