--- a/src/sass/_dark-theme.scss
+++ b/src/sass/_dark-theme.scss
@@ -4,6 +4,10 @@
   background-color: variables.$dt-grey-700;
   background-image: url('../assets/images/bg-desktop-dark.jpg');
 
+  @media screen and (max-width: 900px) {
+    background-image: url('../assets/images/bg-mobile-dark.jpg');
+  }
+
   & .form {
     background-color: variables.$dt-grey-600;
     box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.5);
@@ -71,8 +75,14 @@
   }
 
   & .filter {
-    background-color: variables.$dt-grey-600;
     color: variables.$dt-grey-400;
+    background-color: variables.$dt-grey-600;
+
+    &__buttons-container {
+      background-color: variables.$dt-grey-600;
+      box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.5);
+    }
+
     & .button {
       color: variables.$dt-grey-400;
 
@@ -91,5 +101,9 @@
       color: variables.$bright-blue;
       outline: none;
     }
+  }
+
+  & .list__wrapper {
+    background-color: variables.$dt-grey-600;
   }
 }
